@@ -10,7 +10,8 @@
 #### Switch to BCD-UI well known BindingSets (bcd_sec_user[_settings|_roles])
 ## for authentication and authorization supporting salted passwords, etc. (named option 2. above)
 ## make sure you created an appropriate WEB-INF/bcdui/subjectSettings.xml as well if enabling
-# realmBcdJdbc = de.businesscode.bcdui.subjectsettings.JdbcRealm
+realmBcdJdbc = de.businesscode.bcdui.subjectsettings.JdbcRealm
+realmDefaults = de.businesscode.bcdui.subjectsettings.DefaultSettingsRealm
 # For security reasons BindingItems of password and salt are blind in BindingSet. They are assumed to have columns name password/password_salt. Here you can overwrite that.
 # realmBcdJdbc.passwordColumnName     = password
 # realmBcdJdbc.passwordSaltColumnName = password_salt
@@ -52,7 +53,7 @@
 # oauthcGoogleRealm.principalPropertyName = email
 
 ## To use OAuth authentication along with BCD-UI authorization, add this. If the login found in bcd_sec_user, the id of the user is used for authorization, otherwise the login
-# securityManager.realms = $oauthcAzureRealm, $oauthcGoogleRealm, $realmBcdJdbc
+securityManager.realms = $oauthcAzureRealm, $oauthcGoogleRealm, $realmBcdJdbc, $realmDefaults
 #### OAuth end
 
 ## Support for bcd_log_login logging
