@@ -49,6 +49,7 @@ Some changes are not backward compatible and may require code change in the proj
 
 .Server:
 * new SubjectFilterType mode attribute to specify how this filter type should be enabled. on read, write of both (default)
+* introduce UserSettingsDefaults to subjectSettings.xml to specify user default permissions (add de.businesscode.bcdui.subjectsettings.DefaultSettingsRealm to your realms)
 * fix Postgres (empty) CLOB and BLOB reading
 
 
